--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,14 +22,10 @@
 
 html {
   scroll-behavior: smooth !important;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-body {
   max-width: 100vw;
+  height: 100%;
   margin: 0 auto;
+  padding: 0;
   background-color: var(--background);
 }
 
@@ -43,12 +39,6 @@ body {
   scrollbar-color: var(--rosa-claro) var(--background);
 }
 
-/* BACK TO TOP */
-
-html {
-	scroll-behavior: smooth;
-}
-
 .back-to-top {
 	position: fixed;
 	bottom: 2rem;
@@ -57,7 +47,7 @@ html {
 	align-items: center;
 	justify-content: center;
 	background-color: #F9AAC0;
-	border-radius: 0.5rem;
+	border-radius: 50%;
 	padding: 0.5rem;
 	text-decoration: none;
 	transition: 0.2s ease-out;
