--- a/src/app/carrinho/carrinho.css
+++ b/src/app/carrinho/carrinho.css
@@ -17,37 +17,57 @@
 
 .carrinho_list__products {
     width: 53rem;
-    height: 31rem;
-    padding: 1rem;
+    height: auto;
+    align-self: flex-start;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
     background-color: var(--rosa-claro);
+    -webkit-box-shadow: 0px 3px 21px -6px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 3px 21px -6px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 3px 21px -6px rgba(0, 0, 0, 0.75);
 }
 
 .carrinho_list__products_header {
     color: #fff;
     gap: 1rem;
+    padding: 3px;
+    margin-left: 75px;
+    font-size: 1.1rem;
 }
 
-.carrinho_list__products_product {
+.carrinho_list__products_products {
+    display: flex;
+    flex-direction: column;
+}
+
+.carrinho_list__products_item {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #FAF8F8;
     width: 100%;
-    padding: 10px;
+    padding: 20px 0 20px 75px;
+    border: 0.1px solid rgba(0, 0, 0, 0.13);
+    flex: 1 0 auto; 
 }
 
-.carrinho_list__products_product img {
-    width: 80px;
+.carrinho_list__products_item img {
+    width: 60px;
+    height: auto;
+    object-fit: cover;
 }
 
-.h1p h1 {
-    font-size: 1.188rem;
+.carrinho_list__products_item:last-child {
+    border-radius: 0 0 0.5rem 0.5rem;
 }
 
-.h1p p {
-    text-align: center;
+.h1p {
+    width: 200px;
+}
+
+.containerContador {
+    display: flex;
+    align-self: center;
 }
 
 .contador {
@@ -62,14 +82,18 @@
 
 .menos {
     color: #0000006b;
+    font-size: 1.3rem;
 }
 
 .contador p {
     font-size: 1.2rem;
+    width: 2rem;
+    text-align: center;
 }
 
 .mais {
     color: var(--rosa-claro);
+    font-size: 1.3rem;
 }
 
 .valor {
@@ -79,7 +103,7 @@
 .remove__item {
     background-color: var(--rosa-claro);
     color: #fff;
-    padding: 5px 20px;
+    padding: 2px 20px;
     font-size: 1.3rem;
     border-top-left-radius: 14.73px;
     border-top-right-radius: 0;
@@ -107,10 +131,63 @@
     border-radius: 0.5rem;
 }
 
+.valor {
+    font-weight: 300;
+    width: 100px;
+    text-align: right;
+}
 .carrinho_cart__summary {
     height: 15.2rem;
 }
 
 .carrinho_delivery {
     height: 15.2rem;
+}
+
+.carrinho_produto_preco {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+@media (max-width: 768px) {
+    .carrinho_list__products {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .carrinho_list__products_item {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .h1p {
+        width: 100%;
+    }
+
+    .valor {
+        width: 100%;
+        text-align: left;
+    }
+
+    .remove__item {
+        width: 100%;
+        text-align: right;
+    }
+}
+
+@media (max-width: 480px) {
+    .carrinho_container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .carrinho_summary {
+        width: 100%;
+    }
+
+    .carrinho_cart__summary,
+    .carrinho_delivery {
+        width: 100%;
+    }
 }
