--- a/src/components/produtos/Produtos.css
+++ b/src/components/produtos/Produtos.css
@@ -1,4 +1,4 @@
-.nossos_doces_container {
+.nossos_doces_opcoes_container {
     box-sizing: border-box;
     background-color: #F6F6E9;
     margin: 0 auto;
@@ -12,7 +12,7 @@
     padding: 1rem;
 }
 
-.nossos_doces_container h1 {
+.nossos_doces_opcoes_container h1 {
     font-size: 4rem;
     margin-bottom: 1rem;
 }
@@ -75,11 +75,11 @@
 }
 
 @media (max-width: 1200px) {
-    .nossos_doces_container {
+    .nossos_doces_opcoes_container {
         max-width: 80%;
     }
 
-    .nossos_doces_container h1 {
+    .nossos_doces_opcoes_container h1 {
         font-size: 3rem;
     }
 
@@ -101,14 +101,14 @@
 }
 
 @media (max-width: 768px) {
-    .nossos_doces_container {
+    .nossos_doces_opcoes_container {
         width: 100%;
         max-width: 100%;
         height: auto;
         padding: 0.5rem;
     }
 
-    .nossos_doces_container h1 {
+    .nossos_doces_opcoes_container h1 {
         font-size: 2.5rem;
     }
 
@@ -133,7 +133,7 @@
 }
 
 @media (max-width: 480px) {
-    .nossos_doces_container h1 {
+    .nossos_doces_opcoes_container h1 {
         font-size: 2rem;
     }
 
