--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,6 +20,7 @@ header {
   width: 100%;
   padding: 0 8%;
   box-sizing: border-box;
+  filter: drop-shadow(0px 6px 8px #000000);
 }
 
 .header_mobile {
