--- a/src/components/produtos/Produtos.css
+++ b/src/components/produtos/Produtos.css
@@ -29,6 +29,7 @@
 .nossos_doces_img {
     border-radius: 50%;
     width: 150px;
+    height: 100%;
     object-fit: cover;
     aspect-ratio: 1/1;
     transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
