cardápios arrumados; hover botão adicionar carrinho; adicionado botão "inicie seu pedido" na home porém sem funcionalidade

--- a/src/components/carrinho/carrinho.css
+++ b/src/components/carrinho/carrinho.css
@@ -65,6 +65,11 @@
     width: 200px;
 }
 
+.h1p h1 {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
 .containerContador {
     display: flex;
     align-self: center;
