--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -93,7 +93,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 98vh;
+  height: 100vh;
   background-image: url('../../../public/bg.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -112,6 +112,7 @@ header {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  gap: .5rem;
 }
 
 .slogan-logo {
@@ -127,6 +128,23 @@ header {
   line-height: 4rem;
   text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.75);
   margin: 0;
+}
+
+.inicie_pedido {
+  background-color: var(--rosa-claro);
+  font-size: 1.5rem;
+  font-weight: 300;
+  padding: 2px 80px;
+  border-radius: 10px;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.75);
+}
+
+.inicie_pedido:hover {
+  transform: scale(1.1);
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .highlighted-text {
@@ -218,7 +236,7 @@ header {
   header {
     padding: 0 5%;
   }
-  
+
   .slogan-container {
     height: 100vh;
     background-clip: border-box;
