--- a/src/components/produtos/Produto.css
+++ b/src/components/produtos/Produto.css
@@ -53,7 +53,7 @@
 }
 
 .card h1 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #5D3A2E;
   text-align: center;
   margin: 0;
@@ -93,12 +93,14 @@
   font-size: 18px;
   cursor: pointer;
   transition: background-color 0.3s;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   text-wrap: nowrap;
-
 }
 
 .add_cart:hover {
   background-color: #47312e;
+  transform: scale(1.1);
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 @media (max-width: 1200px) {
