--- a/src/components/produtos/Produtos.css
+++ b/src/components/produtos/Produtos.css
@@ -1,6 +1,9 @@
+.cards {
+    background-color: var(--background);
+  }
+
 .nossos_doces_opcoes_container {
     box-sizing: border-box;
-    background-color: #F6F6E9;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -16,7 +19,7 @@
 .nossos_doces_opcoes_container h1 {
     font-size: 4rem;
     margin-bottom: 1rem;
-    line-height: 1px;
+    line-height: 1.2;
     color: var(--marrom);
 }
 
@@ -34,18 +37,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    width: 80%;
-    flex-wrap: nowrap;
+    gap: 6rem;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .nossos_doces_img {
     border-radius: 50%;
     width: 200px;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
     aspect-ratio: 1/1;
     transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    background-color: var(--rosa-claro);
+    mix-blend-mode: multiply;
     flex-shrink: 0;
 }
 
@@ -79,7 +84,7 @@
 .nossos_doces_p {
     font-size: 1rem;
     text-align: center;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     flex-grow: 1;
     word-break: break-word;
@@ -89,9 +94,10 @@
     transform: scale(1.1);
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
     .nossos_doces_opcoes_container {
-        max-width: 80%;
+        width: 90%;
+        max-width: 100%;
     }
 
     .nossos_doces_opcoes_container h1 {
@@ -104,23 +110,14 @@
 
     .nossos_doces_img {
         width: 120px;
-    }
-
-    .nossos_doces_item {
-        min-height: 200px;
-    }
-
-    .nossos_doces_p {
-        font-size: 0.9rem;
+        height: 120px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     .nossos_doces_opcoes_container {
         width: 100%;
         max-width: 100%;
-        height: auto;
-        padding: 0.5rem;
     }
 
     .nossos_doces_opcoes_container h1 {
@@ -128,39 +125,11 @@
     }
 
     .nossos_doces_opcoes {
-        flex-wrap: wrap;
-        gap: 1.3rem;
-        width: 100%;
-        padding: 0.5rem;
+        gap: 0.5rem;
     }
 
     .nossos_doces_img {
         width: 100px;
-    }
-
-    .nossos_doces_item {
-        min-height: 150px;
-    }
-
-    .nossos_doces_p {
-        font-size: 0.8rem;
-    }
-}
-
-@media (max-width: 480px) {
-    .nossos_doces_opcoes_container h1 {
-        font-size: 2rem;
-    }
-
-    .nossos_doces_opcoes {
-        gap: 1rem;
-    }
-
-    .nossos_doces_img {
-        width: 80px;
-    }
-
-    .nossos_doces_p {
-        font-size: 0.7rem;
+        height: 100px;
     }
 }
