--- a/src/components/carrinho/carrinho.css
+++ b/src/components/carrinho/carrinho.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 87vh;
     background-color: #EDEDED;
 }
 
@@ -47,7 +47,7 @@
     background-color: #FAF8F8;
     width: 100%;
     padding: 20px 0 20px 75px;
-    border: 0.1px solid rgba(0, 0, 0, 0.13);
+    border-bottom: 0.1px solid rgba(0, 0, 0, 0.13);
     flex: 1 0 auto; 
 }
 
@@ -116,6 +116,14 @@
     border-bottom-left-radius: 14.73px;
 }
 
+.btnRemove_item {
+    transition: 0.3s;
+}
+
+.btnRemove_item:hover {
+    color: red
+}
+
 .carrinho_summary {
     display: flex;
     flex-direction: column;
@@ -146,6 +154,52 @@
 
 .carrinho_delivery {
     height: 15.2rem;
+    border-radius: 0.5rem;
+}
+
+.header_carrinho_delivery {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    padding: 5px;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.container_opcoes {
+    background-color: white;
+    color: #ACA8A9;
+    border-radius: 0 0 0.5rem 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 12px;
+}
+
+.moto,
+.casa {
+    color: #ACA8A9;
+    font-size: 2rem;
+}
+
+.delivery,
+.retirada {
+    border: 1.5px solid #ACA8A9;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 180px;
+    padding: .3rem;
+    margin: 1rem;
+}
+
+.delivery h1,
+.retirada h1 {
+    font-weight: 500;
+    font-size: 1.3rem;
 }
 
 .carrinho_produto_preco {
@@ -182,7 +236,15 @@
     background-color: #fff;
     width: 100%;
     padding: 1.4rem;
-    border-radius: 0.5rem;
+    border-radius: 0 0 0.5rem 0.5rem;
+}
+
+.h1popcoes h1 {
+    font-size: 1.1rem;
+}
+
+.h1popcoes p {
+    font-size: .89rem;
 }
 
 .items__summary {
@@ -218,45 +280,3 @@
     font-weight: 300;
 }
 
-@media (max-width: 768px) {
-    .carrinho_list__products {
-        width: 100%;
-        padding: 10px;
-    }
-
-    .carrinho_list__products_item {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 10px;
-    }
-
-    .h1p {
-        width: 100%;
-    }
-
-    .valor {
-        width: 100%;
-        text-align: left;
-    }
-
-    .remove__item {
-        width: 100%;
-        text-align: right;
-    }
-}
-
-@media (max-width: 480px) {
-    .carrinho_container {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .carrinho_summary {
-        width: 100%;
-    }
-
-    .carrinho_cart__summary,
-    .carrinho_delivery {
-        width: 100%;
-    }
-}
