--- a/src/components/produtos/Produto.css
+++ b/src/components/produtos/Produto.css
@@ -7,7 +7,8 @@
 }
 
 .doces_container {
-  width: 50%;
+  width: 100%;
+  max-width: 68rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -29,6 +30,10 @@
   margin-bottom: 2rem;
 }
 
+.cards {
+  background-color: var(--background);
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -39,13 +44,8 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
   text-align: center;
-  margin-right: 90px;
-  width: auto;
-  gap: 1rem;
-}
-
-.card:hover {
-  transform: scale(1.05);
+  width: 90%;
+  gap: 2rem;
 }
 
 .card:hover {
@@ -63,24 +63,38 @@
 .doces_details {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
+  gap: 2rem;
+  justify-content: space-between;
   align-content: center;
+  flex-grow: 1; /* Faz com que o .doces_details ocupe o espaço disponível */
 }
 
-.nossos_opcoes_desc {
+.card_produto_titulo {
+  font-size: 1.6rem;
+  color: #5D3A2E;
   text-align: center;
-  font-weight: 400;
-  font-size: 0.9rem;
+  margin: 0;
+  height: 2.5rem; /* Define uma altura fixa para o título */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card_produto_descricao {
   font-size: 1rem;
   color: #333;
   text-transform: lowercase;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: normal;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-height: 4.5rem;
 }
 
 .card_produto_valor {
+  font-size: 1.3rem;
   font-weight: 500;
 }
 
@@ -98,67 +112,43 @@
   color: #fff;
   font-size: 18px;
   cursor: pointer;
-  transition: background-color 0.3s;
-  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-  text-wrap: nowrap;
+  transition: background-color 0.3s, transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  white-space: nowrap;
 }
 
 .add_cart:hover {
   background-color: #47312e;
   transform: scale(1.1);
-  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-@media (max-width: 1200px) {
-  .doces_background {
-    padding: 100px 100px;
-  }
-
-  .doces_titulo {
-    font-size: 4rem;
-  }
-
-  .card {
-    flex: 1 1 calc(50% - 20px);
-    max-width: calc(50% - 20px);
-  }
 }
 
 @media (max-width: 768px) {
-  .doces_background {
-    padding: 50px 50px;
+  .doces_opcoes_container {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 1rem;
+    justify-content: center;
   }
 
   .doces_titulo {
+    text-align: center;
     font-size: 3rem;
-  }
-
-  .card {
-    flex: 1 1 100%;
-    max-width: 100%;
-  }
-
-  .card img {
-    width: 100px;
-    height: 100px;
   }
 }
 
 @media (max-width: 480px) {
-  .doces_background {
-    padding: 20px 20px;
-  }
 
-  .doces_titulo {
-    font-size: 2rem;
+  .doces_opcoes_container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 
   .card {
-    padding: 10px;
-  }
-
-  .card h1 {
-    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    overflow: hidden;
+    align-items: center;
+    width: 100%;
   }
 
   .card img {
@@ -166,8 +156,67 @@
     height: 80px;
   }
 
+  .doces_img {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .doces_details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    flex: 1;
+    width: 100%;
+  }
+
+  .card_produto_titulo {
+    font-size: 1.2rem;
+    color: #5D3A2E;
+    text-align: center;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    align-self: center;
+  }
+
+  .card_produto_descricao {
+    font-size: 1rem;
+    color: #333;
+    text-transform: lowercase;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    max-height: 4.5rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .card_produto_valor {
+    font-size: 1rem;
+    font-weight: 500;
+    white-space: nowrap;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .doces_footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
   .add_cart {
-    font-size: 16px;
-    padding: 8px 16px;
+    width: 100%;
+    text-align: center;
   }
 }
