--- a/src/components/produtos/Produtos.css
+++ b/src/components/produtos/Produtos.css
@@ -50,7 +50,6 @@
     aspect-ratio: 1/1;
     transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     background-color: var(--rosa-claro);
-    mix-blend-mode: multiply;
     flex-shrink: 0;
 }
 
@@ -116,6 +115,7 @@
 
 @media (max-width: 480px) {
     .nossos_doces_opcoes_container {
+        grid-template-columns: repeat(2, 1fr);
         width: 100%;
         max-width: 100%;
     }
@@ -125,7 +125,8 @@
     }
 
     .nossos_doces_opcoes {
-        gap: 0.5rem;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
     }
 
     .nossos_doces_img {
