--- a/src/components/carrinho/carrinho.css
+++ b/src/components/carrinho/carrinho.css
@@ -15,7 +15,7 @@
     gap: 2rem;
     border-radius: 0.5rem;
     max-width: 100%;
-     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .carrinho_list__products {
@@ -37,7 +37,7 @@
     padding: 3px;
     font-size: 1.1rem;
     background-color: #f9aac0;
-    border-radius: 0.5rem 0.5rem 0 0 ;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .texto {
@@ -108,7 +108,6 @@
     justify-content: space-between;
     gap: 1rem;
     width: 26rem;
-    height: 31rem;
 }
 
 .carrinho_cart__summary,
@@ -132,7 +131,7 @@
 }
 
 .carrinho_delivery {
-    height: 15.2rem;
+    height: auto;
     border-radius: 0.5rem;
 }
 
@@ -148,6 +147,7 @@
 
 .container_opcoes {
     background-color: white;
+    height: auto;
     color: #ACA8A9;
     border-radius: 0 0 0.5rem 0.5rem;
     display: flex;
@@ -170,7 +170,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: 100%;
 }
 
@@ -178,7 +178,7 @@
     border-radius: 100%;
     padding: .1rem;
     border: 2px solid #ACA8A9;
-     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .checkbox_fill {
@@ -187,7 +187,7 @@
     border: 2px solid #ACA8A9;
     background-color: #ACA8A9;
     opacity: 0;
-     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .active .delivery,
@@ -206,7 +206,7 @@
 
 .delivery:active,
 .checkbox_border:active,
-.moto:active{
+.moto:active {
     border-color: var(--rosa-claro);
     color: var(--rosa-claro);
 }
@@ -271,7 +271,7 @@
     width: 100%;
     padding: 1.4rem;
     border-radius: 0 0 0.5rem 0.5rem;
-     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .h1popcoes h1 {
@@ -365,6 +365,7 @@
 }
 
 @media (max-width: 480px) {
+
     .header_carrinho_delivery,
     .header_icons,
     .header_carrinho_summary {
@@ -372,9 +373,69 @@
         padding: 3px;
     }
 
-    .container_opcoes,
-    .bodyteste {
-        padding: 10px;
+    .carrinho_container {
+        flex-direction: column;
+        gap: 1rem;
+        padding: .8rem;
+        overflow: hidden;
+    }
+
+    .carrinho_list__products_item {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 10px 0 10px 10px;
+    }
+
+    .containerContador {
+        width: 100%;
+    }
+
+    .contador {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border: 2px solid #0000007e;
+        gap: 0;
+        padding: 5px 15px;
+        border-radius: 5px;
+    }
+
+    .h1p {
+        width: 25%;
+    }
+    
+    .h1p h1 {
+        font-size: 1.1rem;
+        flex-wrap: wrap;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .carrinho_list__products_item img {
+        width: 20%;
+        height: auto;
+    }
+
+    .carrinho_summary {
+        margin: 3rem;
+        gap: 2rem;
+    }
+
+    .carrinho_cart__summary,
+    .carrinho_delivery {
+        width: 100%;
+    }
+
+    .container_opcoes {
+        background-color: white;
+        color: #ACA8A9;
+        border-radius: 0 0 0.5rem 0.5rem;
+        display: flex;
+        flex-direction: column;
+        transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+        padding: 1rem;
+        gap: 1rem;
     }
 
     .delivery {
@@ -384,12 +445,15 @@
 
     .qtndItem,
     .formRece {
-        flex-direction: column;
         gap: 1rem;
     }
 
     .total {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
+    }
+
+    .btnSend {
+        width: 55%;
     }
 
     .btnSend button {
