--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -94,7 +94,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 5%;
+    padding: 5px 5%;
+    background-color: var(--rosa-claro);
   }
 
 }
