header; hover botao carrinho

--- a/src/components/carrinho/carrinho.css
+++ b/src/components/carrinho/carrinho.css
@@ -303,6 +303,12 @@
     padding: 10px 30px;
     background-color: var(--rosa-claro);
     border-radius: 6px;
+    transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.btnSend:hover {
+    transform: scale(1.05);
+    transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .btnSend button {
