--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,14 +76,27 @@ html {
   justify-content: space-between;
   align-items: center;
   height: 100vh;
-  background-image: url('../../public/bg.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
   margin: 0;
   position: relative;
   z-index: 1;
+  overflow: hidden;
+}
+
+.parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: translateZ(0);
+  will-change: transform;
+  z-index: -1;
 }
 
 .slogan-content {
@@ -170,6 +183,10 @@ html {
   transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+.inciar_pedido {
+  margin-top: 1.5rem;
+}
+
 @media (max-width: 1200px) {
   .highlighted-text {
     font-size: 3.5rem;
@@ -198,6 +215,14 @@ html {
 @media (max-width: 480px) {
   header {
     padding: 0 5%;
+  }
+
+  .parallax {
+    background-position: 70% center;
+    will-change: contents;
+    background-size: cover;
+    height: 107vh;
+    overflow: visible;
   }
 
   .slogan-container {
