--- a/src/components/produtos/Produtos.css
+++ b/src/components/produtos/Produtos.css
@@ -104,7 +104,7 @@
     }
 
     .nossos_doces_opcoes {
-        gap: 3rem;
+        gap: 2rem;
     }
 
     .nossos_doces_img {
@@ -125,6 +125,7 @@
     }
 
     .nossos_doces_opcoes {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 2em;
     }
